syntax = "proto3";

package deleteWallet;

message deleteWalletRequest {
  string email = 1;
  string password = 2;
}

message deleteWalletResponse {
  bool success = 1;
  string message = 2;
  string userId = 3;
  string error = 4;
}

message deleteWalletConfirmRequest {
  string email = 1;
  string password = 2;
}

message deleteWalletConfirmResponse {
  bool success = 1;
  string privatekey = 2;
  string userId = 3;
  string error = 4;
}

service deleteWalletService {
  rpc deleteWalletConfirm(deleteWalletConfirmRequest) returns (deleteWalletConfirmResponse);
  rpc deleteWallet(deleteWalletRequest) returns (deleteWalletResponse);
}
